--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 	"categories": [
 		"Other"
 	],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/rebornix/vscode-typing-practice"
+    },
 	"activationEvents": [
         "*",
 		"onCommand:typing-practice.startTypingPracticeFromCursor"
